--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@reduxjs/toolkit": "^2.11.2",
+    "axios": "^1.13.2",
     "expo": "~54.0.31",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
@@ -46,6 +47,7 @@
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
+    "@types/node": "^25.0.9",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
