--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.31",
     "expo-auth-session": "~7.0.10",
+    "expo-build-properties": "^1.0.10",
     "expo-constants": "~18.0.12",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
