Refine .easignore to enforce exclusion of node_modules and .git

--- a/.easignore
+++ b/.easignore
@@ -1,10 +1,14 @@
+/node_modules/
 node_modules/
 **/node_modules/
-backend/
-.clio-cache/
+/backend/
+/.git/
+.git/
+/android/
+/ios/
 .expo/
 npm-debug.log
 yarn-error.log
-android/
-ios/
-.git/
+.DS_Store
+*.apk
+*.aab
