Simplify .easignore patterns

--- a/.easignore
+++ b/.easignore
@@ -1,14 +1,10 @@
-/node_modules/
-node_modules/
-**/node_modules/
-/backend/
-/.git/
-.git/
-/android/
-/ios/
-.expo/
-npm-debug.log
-yarn-error.log
-.DS_Store
-*.apk
-*.aab
+node_modules
+/node_modules
+backend
+/backend
+.git
+/.git
+android
+/android
+ios
+/ios
