--- a/app.json
+++ b/app.json
@@ -5,7 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "scheme": "myapp",
+    "scheme": "com.bytesved.freshdrop",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
