--- a/app.json
+++ b/app.json
@@ -13,6 +13,7 @@
     },
     "android": {
       "package": "com.bytesved.freshdrop",
+      "googleServicesFile": "./google-services.json",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/adaptive-icon.png"
@@ -26,6 +27,7 @@
     },
     "plugins": [
       "expo-router",
+      "@react-native-google-signin/google-signin",
       [
         "expo-splash-screen",
         {
