--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "expo-server-sdk": "^5.0.0",
     "express": "^5.2.1",
     "express-async-handler": "^1.2.0",
     "google-auth-library": "^10.5.0",
@@ -23,6 +24,7 @@
     "mongoose": "^9.1.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.12",
-    "nodemon": "^3.1.11"
+    "nodemon": "^3.1.11",
+    "socket.io": "^4.8.3"
   }
 }
